# querylens-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
example_sql/: case_complexity.sql  hardcoded_values.sql  joins.sql  simple_select.sql
src/: config.rs  main.rs
src/commands/: diff.rs  examples.rs  lint.rs  mod.rs  report.rs  scan.rs  score.rs
